# hakchi2

./: .gitattributes  .gitignore  .gitmodules  AboutBox.Designer.cs  AboutBox.ar-SA.resx  AboutBox.cs  AboutBox.fr-FR.resx  AboutBox.resx  AboutBox.sv.resx  ApplicationFileInfo.cs  ClovershellConnection.cs  ConfigIni.cs  ConsoleSelectDialog.Designer.cs  ConsoleSelectDialog.cs  ConsoleSelectDialog.es-ES.resx  ConsoleSelectDialog.it-IT.resx  CustomBorderManager.Designer.cs  CustomBorderManager.cs  CustomBorderManager.resx  DefaultBorder.cs  EventStream.cs  ExportGamesDialog.Designer.cs  ExportGamesDialog.ar-SA.resx  ExportGamesDialog.cs  ExportGamesDialog.de-DE.resx  ExportGamesDialog.es.resx  ExportGamesDialog.fr-FR.resx  ExportGamesDialog.resx  ExportGamesDialog.sv.resx  FdsGame.cs  FileBrowserForm.Designer.cs  FileBrowserForm.cs  FileBrowserForm.resx  FodyWeavers.xml  FoldersManagerForm.Designer.cs  FoldersManagerForm.ar-SA.resx  FoldersManagerForm.bg-BG.resx  FoldersManagerForm.ca-ES.resx  FoldersManagerForm.cs  FoldersManagerForm.da-DK.resx  (+629 more)
.github/: FUNDING.yml
Apps/: AppTypeCollection.cs  ArcadeGame.cs  Atari2600Game.cs  BorderElement.cs  BuiltInCores.cs  CoreCollection.cs  CoreCommands.cs  DesktopFile.cs  FdsGame.cs  GameGearGame.cs  GbGame.cs  GbaGame.cs  GbcGame.cs  GenesisGame.cs  ICloverAutofill.cs  INesMenuElement.cs  ISupportsGameGenie.cs  LibRetroCollection.cs  LibretroGame.cs  MegaDriveGame.cs  N64Game.cs  NesApplication.cs  NesDefaultGame.cs  NesGame.cs  NesMenuElementBase.cs  NesMenuFolder.cs  NesMiniApplication.cs  NesUGAme.cs  PceGame.cs  Sega32XGame.cs  SmsGame.cs  SnesGame.cs  SystemCollection.cs  UnknowSystem.cs  UnknownGame.cs
Clovershell/: ClovershellConnection.cs  ClovershellException.cs  ClovershellWrapper.cs  ExecConnection.cs  ShellConnection.cs
Controls/: ImageGoogler.cs
DesktopEntries/: CLV-P-HAAAJ.desktop  CLV-P-HAACJ.desktop  CLV-P-HAADJ.desktop  CLV-P-HAAHJ.desktop  CLV-P-HAANJ.desktop  CLV-P-HAAQJ.desktop  CLV-P-HAARJ.desktop  CLV-P-HAASJ.desktop  CLV-P-HAAUJ.desktop  CLV-P-HABCJ.desktop  CLV-P-HABMJ.desktop  CLV-P-HABQJ.desktop  CLV-P-HABRJ.desktop  CLV-P-HACAJ.desktop  CLV-P-HACCJ.desktop  CLV-P-HACEJ.desktop  CLV-P-NAAAE.desktop  CLV-P-NAACE.desktop  CLV-P-NAADE.desktop  CLV-P-NAAFE.desktop  CLV-P-NAAHE.desktop  CLV-P-NAANE.desktop  CLV-P-NAAPE.desktop  CLV-P-NAASE.desktop  CLV-P-NAATE.desktop  CLV-P-NAAVE.desktop  CLV-P-NAAXE.desktop  CLV-P-NAAZE.desktop  CLV-P-NABCE.desktop  CLV-P-NABKE.desktop  CLV-P-NABME.desktop  CLV-P-NABNE.desktop  CLV-P-NABQE.desktop  CLV-P-NABRE.desktop  CLV-P-NABVE.desktop  CLV-P-NACBE.desktop  CLV-P-SAABE.desktop  CLV-P-SAAFE.desktop  CLV-P-SAAHE.desktop  CLV-P-SAAKE.desktop  (+27 more)
FelLib/: AWFELMessage.cs  AWFELStandardRequest.cs  AWFELStatusResponse.cs  AWFELVerifyDeviceResponse.cs  AWUSBRequest.cs  AWUSBResponse.cs  Fel.cs  FelException.cs  FelParseException.cs
Files/: CheckFileType.cs  Extensions.cs
Ftp/: ArxOneFtpWrapper.cs  FluentFtpWrapper.cs  FtpStream.cs  FtpWrapper.cs
FtpClient/: ArxOneFtpWrapper.cs
FtpServer/: DebugLogHandler.cs  FileSystemHelper.cs  IAuthHandler.cs  IFileSystemHandler.cs  ILogHandler.cs  NesMiniAuthHandler.cs  NesMiniFileSystemHandler.cs  Server.cs  Session.cs
GameGenie/: GameGenieDataBase.cs  GameGenieFormatException.cs  GameGenieNotFoundException.cs  GameGeniePatcherNes.cs  GameGeniePatcherSnes.cs
Hmod/: Hmod.cs  Readme.cs  ReadmeCache.cs  SelectForm.Designer.cs  SelectForm.cs  SelectForm.pt-BR.resx  SelectForm.resx  SelectForm.sv.resx
Installer/: Installer.vcxproj
LibWinUsb/: IUsbDevice.cs  IUsbInterface.cs  UsbDevice.Common.cs  UsbDevice.Error.cs  UsbDevice.OS.Specific.cs  UsbDevice.cs  UsbEndpointReader.cs  UsbEndpointWriter.cs  UsbGlobals.cs
Licenses/: ArxOne.Ftp.txt  Autoupdater.NET.Official.txt  CommonMark.NET.txt  CueSharp.txt  LibUsbDotNet.txt  MultiStream.cs.txt  Tmds.MDns.txt
Makefile Projects/: Installer.vcxproj  Web Installer.vcxproj  ZIP Files.vcxproj
Manager/: BitmapManager.cs  BookManager.cs  CoverManager.cs  EmulatorManager.cs  EventBus.cs  GameManager.cs  RomManager.cs  SystemType.cs
ModHub/: ModHubForm.Designer.cs  ModHubForm.cs  ModHubResources.Designer.cs  ModHubResources.es.resx  ModHubResources.fr-FR.resx  ModHubResources.resx  ModHubResources.sv.resx
NSI/: Installer.nsi  Telnet.nsi  Web Installer.nsi  debug-uninstall.nsh
ProgressODoom/: AbstractProgressBar.cs  AbstractProgressPainter.cs  BarberPoleProgressPainter.cs  BevelledGradientProgressPainter.cs  BevelledProgressPainter.cs  CandyCaneBackgroundPainter.cs  CandyCaneProgressPainter.cs  ChainedGlossPainter.cs  ColorTools.cs  DualProgressBar.cs  FlatGlossPainter.cs  FruityLoopsBackgroundPainter.cs  FruityLoopsProgressPainter.cs  GradientBackgroundPainter.cs  GradientGlossPainter.cs  HSV.cs  IAnimatedProgressPainter.cs  IGlossPainter.cs  IProgressBackgroundPainter.cs  IProgressBorderPainter.cs  IProgressPainter.cs  JavaProgressPainter.cs  MetalProgressPainter.cs  (+14 more)
driver/source/: AUTHORS  ChangeLog  Makefile.am  NEWS  README.md  _bm.sh  _bump.sh  _chlver.sh  _chzver.sh  _pre-commit.sh  _release.sh  autogen.sh  configure.ac  ddk_build.cmd  libwdi.sln
driver/source/libwdi/: Makefile.am  build64.h  embedder.c  embedder.h  embedder_files.h  installer.c  installer.h  libusb0.cat.in  libusb0.inf.in  libusbk.cat.in  libusbk.inf.in  libwdi.c  libwdi.def  libwdi.h  libwdi.pc.in  libwdi.rc  libwdi_dlg.c  libwdi_i.h  logging.c  logging.h  msapi_utf8.h  mssign32.h  pki.c  resource.h  stdfn.h  tokenizer.c  tokenizer.h  usbser.cat.in  usbser.inf.in  vid_data.c  vid_data.sh  winusb.cat.in  winusb.inf.in
driver/source/libwdi/.msvc/: detect_64build.vcxproj  embedder.vcxproj  embedder.vcxproj.filters  embedder_sources  installer_x64.vcxproj  installer_x64.vcxproj.filters  installer_x64_sources  installer_x86.vcxproj  installer_x86_sources  libwdi_dll.vcxproj  libwdi_dll.vcxproj.filters  libwdi_sources  libwdi_static.vcxproj  libwdi_static.vcxproj.filters
driver/source/msvc/: config.h
driver/source/nesmini_driver/: nesmini_driver.cpp  nesmini_driver.vcxproj  nesmini_driver.vcxproj.filters
(+1944 files in other folders)
